# kzg

./: .gitignore  Cargo.toml  README.md  bench_all_with_flamegraph.sh  copy_bench_report.sh
benches/: commit.rs  commit_coeff_form.rs  commit_eval_form.rs  create_witness.rs  create_witness_coeff_form.rs  create_witness_eval_form.rs  fft.rs  poly_arithmetic.rs  poly_verify.rs  poly_verify_coeff_form.rs  verify_eval.rs  verify_eval_coeff_form.rs
src/: coeff_form.rs  eval_form.rs  ft.rs  lib.rs  polynomial.rs  utils.rs  worker.rs  wrapper_types.rs
