[package]
name = "kzg"
version = "0.3.5"
edition = "2018"
license = "MIT"
authors = [ "sladuca777@gmail.com" ]
repository = "https://github.com/Sladuca/kzg"
readme = "README.md"
description = "a simple implementation of the KZG polynomial commitment scheme"
categories = ["cryptography"]
keywords = ["polynomials", "commitment", "cryptography"]

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
csprng_setup = ["rand"]

[dependencies]
pairing = "0.21.0"
thiserror = "1.0.26"
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
bls12_381 = "0.6.0"
lazy_static = "1.4.0"
criterion = "0.3"

[[bench]]
name = "commit"
harness = false

[[bench]]
name = "poly_verify"
harness = false

[[bench]]
name = "create_witness"
harness = false

[[bench]]
name = "verify_eval"
harness = false

[[bench]]
name = "poly_arithmetic"
harness = false
