[package]
name = "kzg"
version = "0.8.0-beta.1"
edition = "2018"
license = "MIT"
authors = [ "sladuca777@gmail.com" ]
repository = "https://github.com/Sladuca/kzg"
readme = "README.md"
description = "a simple implementation of the KZG polynomial commitment scheme"
categories = ["cryptography"]
keywords = ["polynomials", "commitment", "cryptography"]

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
csprng_setup = ["rand"]
parallel = ["rayon"]
serde_support = ["serde"]

[dependencies]
pairing = "0.21.0"
thiserror = "1.0.26"
rand = { version = "0.8.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
blstrs = { git = "https://github.com/Sladuca/blstrs.git", rev = "b98fc83" }
rayon = { version = "1.5.1", optional = true}

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
lazy_static = "1.4.0"
criterion = "0.3"
bincode = "1.3.3"

[[bench]]
name = "commit_coeff_form"
harness = false

[[bench]]
name = "commit_eval_form"
harness = false

[[bench]]
name = "poly_verify_coeff_form"
harness = false

[[bench]]
name = "create_witness_coeff_form"
harness = false

[[bench]]
name = "create_witness_eval_form"
harness = false

[[bench]]
name = "verify_eval_coeff_form"
harness = false

[[bench]]
name = "poly_arithmetic"
harness = false

[[bench]]
name = "fft"
harness = false
